@@ -212,9 +212,6 @@ while ((docid = docsAndPositionsEnum.nextDoc()) != DocIdSetIterator.NO_MORE_DOCS
            number of deleted documents in the index.
        <li>{@link org.apache.lucene.index.Fields#size}: Returns the number of indexed
            fields.
-       <li>{@link org.apache.lucene.index.Fields#getUniqueTermCount}: Returns the number 
-           of indexed terms, the sum of {@link org.apache.lucene.index.Terms#size}
-           across all fields.
     </ul>
 </p>
 <a name="documentstats"></a>
